--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,6 +4,8 @@ spring:
       ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.PostgreSQL94Dialect
+  profiles:
+    active: test
 
 keycloak:
   resource-roles-claim: "pet-buddy-client"
