--- a/pom.xml
+++ b/pom.xml
@@ -110,10 +110,12 @@
                     <version>0.8.8</version>
                     <configuration>
                         <excludes>
-                            <exclude>com/example/petbuddybackend/config/MockDataCreator.java</exclude>
-                            <exclude>com/example/petbuddybackend/config/SecurityConfig.java</exclude>
-                            <exclude>com/example/petbuddybackend/controller/TestController.java</exclude>
-                            <exclude>com/example/petbuddybackend/service/MockService.java</exclude>
+                            <exclude>com/example/petbuddybackend/dto/**</exclude>
+                            <exclude>com/example/petbuddybackend/PetBuddyBackendApplication.class</exclude>
+                            <exclude>com/example/petbuddybackend/config/MockDataCreator.class</exclude>
+                            <exclude>com/example/petbuddybackend/config/SecurityConfig.class</exclude>
+                            <exclude>com/example/petbuddybackend/controller/TestController.class</exclude>
+                            <exclude>com/example/petbuddybackend/service/mock/MockService.class</exclude>
                         </excludes>
                     </configuration>
                 </plugin>
