--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Build and check coverage
+      run: mvn -B verify --file pom.xml
