Created general exception response

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
                     <configuration>
                         <excludes>
                             <exclude>com/example/petbuddybackend/dto/**</exclude>
+                            <exclude>com/example/petbuddybackend/utils/exception/**</exclude>
                             <exclude>com/example/petbuddybackend/PetBuddyBackendApplication.class</exclude>
                             <exclude>com/example/petbuddybackend/config/MockDataCreator.class</exclude>
                             <exclude>com/example/petbuddybackend/config/SecurityConfig.class</exclude>
