remove AnimalAttributeValue and instead save all in AnimalAttribute generate Animals and AnimalAttributes to database

--- a/src/main/resources/animal-facility-data.yml
+++ b/src/main/resources/animal-facility-data.yml
@@ -1,4 +1,5 @@
-animal-facilities:
-  -
-    animalType: DOG
-    facility:
+animal-facility-data:
+  animal-facilities:
+    -
+      animalType: DOG
+      facility:
