add generating animal attributes and caretaker offer with configurations and selected options

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,8 @@ spring:
     import:
       - classpath:animal-data.yml
       - classpath:animal-attribute-data.yml
-      - classpath:animal-facility-data.yml
+      - classpath:amenity-data.yml
+      - classpath:animal-amenity-data.yml
 
 keycloak:
   resource-roles-claim: "pet-buddy-client"
