change packages in coverage tests

--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,14 @@
                     <configuration>
                         <excludes>
                             <exclude>com/example/petbuddybackend/dto/**</exclude>
+                            <exclude>com/example/petbuddybackend/entity/**</exclude>
                             <exclude>com/example/petbuddybackend/utils/exception/**</exclude>
                             <exclude>com/example/petbuddybackend/PetBuddyBackendApplication.class</exclude>
-                            <exclude>com/example/petbuddybackend/config/MockDataCreator.class</exclude>
+                            <exclude>com/example/petbuddybackend/config/dataGeneration/**</exclude>
                             <exclude>com/example/petbuddybackend/config/security/NoSecurityConfig.class</exclude>
                             <exclude>com/example/petbuddybackend/config/security/SecurityConfig.class</exclude>
                             <exclude>com/example/petbuddybackend/controller/TestController.class</exclude>
-                            <exclude>com/example/petbuddybackend/service/mock/MockService.class</exclude>
+                            <exclude>com/example/petbuddybackend/service/dataGeneration/**</exclude>
                             <exclude>com/example/petbuddybackend/filter/ExceptionHandlerFilter.class</exclude>
                             <exclude>com/example/petbuddybackend/filter/CORSFilter.class</exclude>
                         </excludes>
