--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,6 +4,7 @@ spring:
       ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.PostgreSQL94Dialect
+      order_by.default_null_ordering: last
   profiles:
     active: test
 
