--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,5 +47,6 @@ springdoc:
   swagger-ui:
     path: "/swagger-ui.html"
 
-timezone:
-  header-name: "Accept-Timezone"
+header-name:
+  timezone: "Accept-Timezone"
+  role: "Accept-Role"
