--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
                             <exclude>com/example/petbuddybackend/dto/**</exclude>
                             <exclude>com/example/petbuddybackend/entity/**</exclude>
                             <exclude>com/example/petbuddybackend/utils/exception/**</exclude>
+                            <exclude>com/example/petbuddybackend/utils/annotations/**</exclude>
                             <exclude>com/example/petbuddybackend/PetBuddyBackendApplication.class</exclude>
                             <exclude>com/example/petbuddybackend/config/dataGeneration/**</exclude>
                             <exclude>com/example/petbuddybackend/config/security/NoSecurityConfig.class</exclude>
