Created mechanism to save metadata per user in chat room

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,7 @@ springdoc:
 header-name:
   timezone: "Accept-Timezone"
   role: "Accept-Role"
+
+url:
+  chat:
+    subscription-pattern: "/topic/messages/%d/%s"
