--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -32,4 +32,6 @@ header-name:
 
 url:
   chat:
-    subscription-pattern: "/topic/messages/%d/%s"
+    topic:
+      base: "/topic/messages"
+      pattern: "/topic/messages/%d/%s"
