Added storing user metadata based on session

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,7 @@ url:
     topic:
       base: "/topic/messages"
       pattern: "/topic/messages/%d/%s"
+  session:
+    topic:
+      base: "/topic/session"
+      pattern: "/topic/session/%s"
