--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,6 +22,12 @@ keycloak:
 logging:
   level:
     root: info
+    com:
+      example:
+        petbuddybackend:
+          controller:
+            ChatWebSocketController: debug
+            WebSocketController: debug
 
 server:
   port: 8081
@@ -35,3 +41,7 @@ url:
     topic:
       base: "/topic/messages"
       pattern: "/topic/messages/%d/%s"
+  session:
+    topic:
+      base: "/topic/session"
+      pattern: "/topic/session/%s"
