--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,16 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -148,6 +158,7 @@
                             <exclude>com/example/petbuddybackend/config/security/**</exclude>
                             <exclude>com/example/petbuddybackend/config/websocket/**</exclude>
                             <exclude>com/example/petbuddybackend/config/web/WebConfig.class</exclude>
+                            <exclude>com/example/petbuddybackend/config/firebase/**</exclude>
                             <exclude>com/example/petbuddybackend/service/datageneration/**</exclude>
                             <exclude>com/example/petbuddybackend/filter/ExceptionHandlerFilter.class</exclude>
                             <exclude>com/example/petbuddybackend/filter/CORSFilter.class</exclude>
