--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,9 @@ spring:
     active: dev
   servlet:
     multipart:
-      max-file-size: 50MB
-      max-request-size: 50MB
+      enabled: true
+      max-file-size: 30MB
+      max-request-size: 150MB
 
   # import data for database
   config:
