websocket notification working

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,11 @@ keycloak:
 logging:
   level:
     root: INFO
+    com:
+      example:
+        petbuddybackend:
+          controller:
+            websocket: DEBUG
 
 server:
   port: 8081
