--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -26,10 +26,7 @@ logging:
       example:
         petbuddybackend:
           controller:
-            websocket:
-              com.example.petbuddybackend.controller.websocket.ChatWebSocketController: debug
-              com.example.petbuddybackend.controller.websocket.WebSocketController: debug
-              com.example.petbuddybackend.controller.websocket.NotificationWebsocketController: debug
+            websocket: DEBUG
 
 server:
   port: 8081
