--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -62,3 +62,10 @@ firebase:
     expiration:
       max-seconds: 21600
       threshold-seconds: 2300
+
+notification:
+  message:
+    reservation: "%s just make a new reservation %d for your services"
+    update_reservation: "%s just update the reservation %d"
+    accepted_reservation: "Your reservation for care %d has been accepted by %s"
+    rejected_reservation: "Your reservation for care %d has been rejected by %s"
