--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
                 <executions>
                     <execution>
                         <id>checkstyle-validation</id>
-                        <phase>validate</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
