delegate translating notifications to frontend add necessary elements to NotificationDTO

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,3 +83,11 @@ firebase:
     expiration:
       max-seconds: 21600        # 6 hours
       threshold-seconds: 2300   # 0.5 hour
+
+
+notification:
+  care:
+    reservation: "care_reservation"
+    update_reservation: "care_update"
+    accepted_reservation: "care_accepted"
+    rejected_reservation: "care_rejected"
