--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -65,8 +65,8 @@ firebase:
       threshold-seconds: 2300
 
 notification:
-  message:
-    reservation: "%s just make a new reservation %d for your services"
-    update_reservation: "%s just update the reservation %d"
-    accepted_reservation: "Your reservation for care %d has been accepted by %s"
-    rejected_reservation: "Your reservation for care %d has been rejected by %s"
+  care:
+    reservation: "care_reservation"
+    update_reservation: "care_update"
+    accepted_reservation: "care_accepted"
+    rejected_reservation: "care_rejected"
