--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -30,6 +30,8 @@ logging:
           service:
             chat:
               session: TRACE
+          middleware:
+            interceptor: TRACE
 
 server:
   port: 8081
@@ -54,6 +56,11 @@ url:
       subscribe-prefix: "/user/topic/notification"
       send-url: "/topic/notification"
       client-subscribe-pattern: "/user/topic/notification"
+  exception:
+    topic:
+      client-subscribe-pattern: "/user/topic/exceptions"
+      send-url: "/topic/exceptions"
+      subscribe-prefix: "/user/topic/exceptions"
 
 
 firebase:
