add provider for geolocation add geolocation calculating to caretaker address

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,6 +87,10 @@ firebase:
       threshold-seconds: 2300   # 0.5 hour
 
 
+opencage:
+  api:
+    key: ${OPENCAGE_API_KEY}
+
 notification:
   care:
     reservation: "care_reservation"
