--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
             <artifactId>tika-core</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencagedata</groupId>
+            <artifactId>jopencage</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
