--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         cache: maven
 
     - name: Build and check coverage
-      run: mvn -B verify --file pom.xml
+      run: mvn -B clean install --file pom.xml
 
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -41,6 +41,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Copy JAR to Docker Context
+        run: cp target/petBuddy-backend-0.0.1-SNAPSHOT.jar .
 
       - name: Extract version from tag
         id: extract_version
