--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build-project:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,14 +24,27 @@ jobs:
     - name: Build and check coverage
       run: mvn -B clean install --file pom.xml
 
+    - name: Upload JAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-jar
+        path: target/petBuddy-backend-0.0.1-SNAPSHOT.jar
+      if: github.ref == 'refs/heads/main'
+
   build-and-push-image:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-project
     if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+        if: github.ref == 'refs/heads/main'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -42,8 +55,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Copy JAR to Docker Context
-        run: cp target/petBuddy-backend-0.0.1-SNAPSHOT.jar .
+      - name: Move JAR to Docker context
+        run: mv petBuddy-backend-0.0.1-SNAPSHOT.jar app.jar
 
       - name: Extract version from tag
         id: extract_version
