--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,13 +27,6 @@ jobs:
       - name: List files in target directory (debug)
         run: ls -la target/
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-jar
-          path: target/petBuddy-backend-0.0.1-SNAPSHOT.jar
-        if: github.ref == 'refs/heads/main'
-
   build-and-push-image:
     runs-on: ubuntu-latest
     needs: build-project
@@ -43,25 +36,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download JAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-jar
-
       - name: List files after downloading (debug)
         run: ls -la
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Move JAR to Docker context
-        run: mv petBuddy-backend-0.0.1-SNAPSHOT.jar app.jar
 
       - name: Extract version from tag
         id: extract_version
@@ -74,10 +59,11 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_ENV
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        id: push
+        uses: docker/build-push-action@v3
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: |
             petbuddyzpi/petbuddy-backend:${{ env.version }}
             petbuddyzpi/petbuddy-backend:latest
