--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,5 +65,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          tags: |
             petbuddyzpi/petbuddy-backend:${{ env.version }}
             petbuddyzpi/petbuddy-backend:latest
