--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,13 @@ jobs:
       - name: List files in target directory (debug)
         run: ls -la target/
 
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: target/petBuddy-backend-0.0.1-SNAPSHOT.jar
+        if: github.ref == 'refs/heads/main'
+
   build-and-push-image:
     runs-on: ubuntu-latest
     needs: build-project
@@ -35,6 +42,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+
+      - name: Move JAR to Docker context
+        run: mv petBuddy-backend-0.0.1-SNAPSHOT.jar target/petBuddy-backend-0.0.1-SNAPSHOT.jar
 
       - name: List files after downloading (debug)
         run: ls -la
