--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create target directory (if it doesn't exist)
+        run: mkdir -p target
+
       - name: Download JAR artifact
         uses: actions/download-artifact@v4
         with:
