--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -83,6 +83,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            petbuddyzpi/petbuddy-backend:${{ env.version }}
-            petbuddyzpi/petbuddy-backend:latest
+          tags: petbuddyzpi/petbuddy-backend:${{ env.version }}, petbuddyzpi/petbuddy-backend:latest
