--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -86,3 +86,6 @@ notification:
     update_reservation: "care_update"
     accepted_reservation: "care_accepted"
     rejected_reservation: "care_rejected"
+
+care:
+  accept-time-window: P10D        # 10 days
