add more animals, attributes and amenities data

--- a/src/main/resources/amenity-data.yml
+++ b/src/main/resources/amenity-data.yml
@@ -3,3 +3,22 @@ amenity-data:
     - amenity: scratching post
     - amenity: toys
     - amenity: garden
+    - amenity: litter tray
+    - amenity: specious cage
+    - amenity: aquarium maintenance
+    - amenity: tank decorations
+    - amenity: water filtration
+    - amenity: temperature control
+    - amenity: terrarium
+    - amenity: heat lamp
+    - amenity: basking area
+    - amenity: UVB lighting
+    - amenity: water area
+    - amenity: secure terrarium
+    - amenity: hiding spots
+    - amenity: humidity control
+    - amenity: exercise wheel
+    - amenity: bedding
+    - amenity: tunnels
+    - amenity: catnip
+    - amenity: secure flying space
