modified as review

--- a/src/main/resources/amenity-data.yml
+++ b/src/main/resources/amenity-data.yml
@@ -2,13 +2,12 @@ amenity-data:
   amenityConfigs:
     - amenity: scratching post
     - amenity: toys
-    - amenity: garden
+    - amenity: secured outdoor open area
     - amenity: litter tray
-    - amenity: specious cage
-    - amenity: aquarium maintenance
+    - amenity: spacious cage
     - amenity: tank decorations
     - amenity: water filtration
-    - amenity: temperature control
+    - amenity: thermal regulation
     - amenity: terrarium
     - amenity: heat lamp
     - amenity: basking area
