--- a/src/test/resources/amenity-data.yml
+++ b/src/test/resources/amenity-data.yml
@@ -2,4 +2,4 @@ amenity-data:
   amenityConfigs:
     - amenity: scratching post
     - amenity: toys
-    - amenity: garden
+    - amenity: secured outdoor open area
